# framework16_ledmatrix_widgets

./: Cargo.toml  PKGBUILD  README.md  TODO.md  config.toml  flake.nix  framework-led-matrix.install  framework-led-widgets.service  install-service.sh
nix/: home-manager.nix  nixos-module.nix
src/: config.rs  ledmatrix.rs  main.rs  matrix.rs
src/widget/: battery.rs  binary_clock.rs  clock.rs  cpu.rs  disk.rs  eq.rs  memory.rs  mod.rs  network.rs
