[package]
name = "ledmatrix_widgets"
description = "A rust application for configuring and displaying widgets on the Framework 16 LED Matrix modules"
license = "GPL-3.0"
version = "0.2.0"
edition = "2021"
authors = ["Ryan McGee"]

[dependencies]
log = "0.4"
env_logger = "0.11"

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

chrono = "0.4"
#serialport = {version = "4.3.0", default-features = false}
serialport = "4.3.0"

battery = "0.7"
sysinfo = "0.32"

[package.metadata.rpm]
package = "ledmatrix_widgets"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ledmatrix_widgets = { path = "/usr/bin/ledmatrix_widgets" }
